/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Enum.java to edit this template
 */
package com.library.domain.enums;

/**
 *
 * @author rafianandra
 */
public enum BorrowType {
    ONLINE, // Dipesan dari app, baru ke perpus
    OFFLINE // Dari perpus ke librarian bilang mau pinjam buku ini
}
